--- a/src/scss/_product-detail.scss
+++ b/src/scss/_product-detail.scss
@@ -13,8 +13,8 @@
 }
 
 
-@media screen and (max-width: 768px) {
-  .product-detail{
-    flex-direction: column;
-  }
+@media   (min-width:768px) and (max-width: 1000px) {
+  // .product-detail-img img{
+  //   width: 230px;
+  // }
 }
